commit translated contents

--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -28,6 +28,7 @@
     - name: 静的な HTML サイト
       href: quickstart-html.md
     - name: ARM テンプレート
+      displayName: Resource Manager
       href: quickstart-arm-template.md
     - name: カスタム コンテナー
       href: quickstart-custom-container.md
@@ -91,9 +92,9 @@
       href: operating-system-functionality.md
     - name: デプロイのベスト プラクティス
       href: deploy-best-practices.md
-    - name: セキュリティ
+    - name: Security
       items:
-        - name: Recommendations
+        - name: 推奨事項
           href: security-recommendations.md
         - name: 認証と権限承認
           href: overview-authentication-authorization.md
