--- a/articles/databox/index.yml
+++ b/articles/databox/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.date: 08/16/2019
   ms.custom: seo-azure-migrate
   keywords: cloud data transfer, data migration to cloud, azure data box, data transfer service, data transfer services, azure data transfer
-  ms.openlocfilehash: be5571d44f86d5ba12f604088ca5aab19a973b85
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 6b3ef7ace8bfb481b294ca4d823ccc1c6c2f7367
+  ms.sourcegitcommit: 7dacbf3b9ae0652931762bd5c8192a1a3989e701
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "89177076"
+  ms.lasthandoff: 10/16/2020
+  ms.locfileid: "92125236"
 landingContent:
 - title: Data Box ファミリについて
   linkLists:
@@ -34,7 +34,7 @@ landingContent:
   - linkListType: architecture
     links:
     - text: Azure のデータ転送オプションの選択
-      url: /azure/storage/common/storage-choose-data-transfer-solution
+      url: ../storage/common/storage-choose-data-transfer-solution.md
 - title: 作業開始
   linkLists:
   - linkListType: quickstart
@@ -48,7 +48,7 @@ landingContent:
   - linkListType: learn
     links:
     - text: Data Box を使用してオフラインでデータをインポートする
-      url: https://docs.microsoft.com/learn/modules/move-data-with-azure-data-box/
+      url: /learn/modules/move-data-with-azure-data-box/
 - title: 要件を確認する
   linkLists:
   - linkListType: concept
