--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -313,7 +313,7 @@
             - name: SAP HANA L インスタンス
               href: reservations/prepay-hana-large-instances-reserved-capacity.md?toc=/azure/cost-management-billing/toc.json
             - name: SQL Database
-              href: ../sql-database/sql-database-reserved-capacity.md?toc=/azure/cost-management-billing/toc.json
+              href: ../azure-sql/database/reserved-capacity-overview.md?toc=%252fazure%252fcost-management-billing%252ftoc.json
             - name: Azure Synapse Analytics
               href: reservations/prepay-sql-data-warehouse-charges.md?toc=/azure/cost-management-billing/toc.json
             - name: 仮想マシン
@@ -365,9 +365,9 @@
 - name: リファレンス
   items:
     - name: Azure Cost Management REST API
-      href: 'https://docs.microsoft.com/rest/api/cost-management'
+      href: /rest/api/cost-management
     - name: Azure Consumption REST API
-      href: 'https://docs.microsoft.com/rest/api/consumption'
+      href: /rest/api/consumption
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.consumption/budgets
     - name: Cost Management REST API のサンプル
@@ -377,19 +377,19 @@
     - name: Azure Billing API の概要
       href: manage/usage-rate-card-overview.md
     - name: Azure Billing REST API
-      href: 'https://docs.microsoft.com/rest/api/billing'
+      href: /rest/api/billing
     - name: Azure Consumption API の概要
       href: manage/consumption-api-overview.md
     - name: Azure Consumption REST API
-      href: 'https://docs.microsoft.com/rest/api/consumption'
+      href: /rest/api/consumption
     - name: RateCard REST API
-      href: 'https://msdn.microsoft.com/library/azure/mt219005.aspx'
+      href: /previous-versions/azure/reference/mt219005(v=azure.100)
     - name: Usage REST API
-      href: 'https://msdn.microsoft.com/library/azure/mt219003.aspx'
+      href: /previous-versions/azure/reference/mt219003(v=azure.100)
     - name: Enterprise Reporting の概要
       href: manage/enterprise-api.md
     - name: Enterprise Reporting REST API
-      href: 'https://docs.microsoft.com/rest/api/billing/enterprise/billing-enterprise-api-balance-summary'
+      href: /rest/api/billing/enterprise/billing-enterprise-api-balance-summary
     - name: Reservations
       items:
         - name: 予約 REST API
@@ -493,4 +493,4 @@
         - name: Cloudyn に関する FAQ
           href: cloudyn/cost-mgt-faq.md
         - name: Cloudyn のサポートに問い合わせる
-          href: 'https://docs.microsoft.com/azure/cost-management-billing/costs/open-support-request'
+          href: ./costs/open-support-request.md
