--- a/articles/iot-central/core/index.yml
+++ b/articles/iot-central/core/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 06/21/2020
-  ms.openlocfilehash: bdd087a2826c22d03decba231c2d441c99bca974
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: ee97286cc8b0b2e238d2cf6791c5715b93f8d6c4
+  ms.sourcegitcommit: 7dacbf3b9ae0652931762bd5c8192a1a3989e701
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "90974303"
+  ms.lasthandoff: 10/16/2020
+  ms.locfileid: "92123628"
 landingContent:
 - title: Azure IoT Central について
   linkLists:
@@ -88,7 +88,7 @@ landingContent:
     - text: データをクラウドの宛先にエクスポートする
       url: howto-export-data.md
     - text: IoT Central API を調べる
-      url: https://docs.microsoft.com/learn/modules/manage-iot-central-apps-with-rest-api/
+      url: /learn/modules/manage-iot-central-apps-with-rest-api/
   - linkListType: how-to-guide
     links:
     - text: カスタム規則の作成
