--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 06/30/2020
-  ms.openlocfilehash: 272c5091d99697a77e7fb8420ac8ef2498a7790d
-  ms.sourcegitcommit: fbb620e0c47f49a8cf0a568ba704edefd0e30f81
+  ms.openlocfilehash: 931a6cf2ce644d84553cf35d1c5d912ca2d81160
+  ms.sourcegitcommit: 7dacbf3b9ae0652931762bd5c8192a1a3989e701
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91874375"
+  ms.lasthandoff: 10/16/2020
+  ms.locfileid: "92123853"
 highlightedContent:
   items:
   - title: IoT Central とは
@@ -134,10 +134,10 @@ additionalContent:
   - items:
     - title: IoT Central API
       summary: IoT Central API を調べます。
-      url: https://docs.microsoft.com/rest/api/iotcentral/
+      url: /rest/api/iotcentral/
     - title: Microsoft Learn の IoT Central
       summary: 無料のサンドボックス環境で IoT Central を調べます。
-      url: https://docs.microsoft.com/learn/browse/?products=azure-iot-central
+      url: /learn/browse/?products=azure-iot-central
     - title: 最新の更新
       summary: IoT Central の最新情報を参照してください。
       url: https://azure.microsoft.com/updates/?status=nowavailable&updateType=features&category=iot&query=azure%20iot%20central
