--- a/articles/key-vault/keys/toc.yml
+++ b/articles/key-vault/keys/toc.yml
@@ -15,6 +15,8 @@
       href: quick-create-portal.md
     - name: Python
       href: quick-create-python.md
+    - name: ARM テンプレート
+      href: quick-create-template.md
 - name: チュートリアル
   items:
     - name: HSM で保護されたキーをインポートする (概要)
