--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -686,11 +686,10 @@
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
-            - name: アクセスの制御 (ディレクトリとファイル)
+            - name: アクセス制御モデル
+              href: data-lake-storage-access-control-model.md
+            - name: アクセス制御リスト
               href: data-lake-storage-access-control.md
-            - name: Azure Policy によるセキュリティ制御
-              displayName: 'regulatory, compliance, standards, domains'
-              href: ./security-controls-policy.md
         - name: 互換性
           items:
             - name: マルチプロトコル アクセス
@@ -755,7 +754,7 @@
           items:
             - name: AzCopy
               items:
-                - name: 作業開始
+                - name: はじめに
                   href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Data Lake Storage の使用
                   href: ../common/storage-use-azcopy-blobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
