commit translated contents

--- a/articles/cognitive-services/Custom-Vision-Service/toc.yml
+++ b/articles/cognitive-services/Custom-Vision-Service/toc.yml
@@ -39,7 +39,7 @@
       href: use-prediction-api.md
     - name: Smart Labeler の使用
       href: suggested-tags.md
-    - name: ロールベースのアクセス制御
+    - name: Azure ロールベースのアクセス制御
       href: role-based-access-control.md
     - name: モデルをエクスポートする
       items:
