--- a/articles/cost-management-billing/index.yml
+++ b/articles/cost-management-billing/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: bandersmsft
   ms.author: banders
   ms.date: 01/01/2020
-  ms.openlocfilehash: 3c570c0c258d93086c64c463c6fea3f3bb9bd741
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 66d082c844e3c9c78bf8dbec09e52f8efaf1ee57
+  ms.sourcegitcommit: 33368ca1684106cb0e215e3280b828b54f7e73e8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91652161"
+  ms.lasthandoff: 10/16/2020
+  ms.locfileid: "92132280"
 landingContent:
 - title: コストの分析
   linkLists:
@@ -27,7 +27,7 @@ landingContent:
   - linkListType: get-started
     links:
     - text: 自分のペースで学習する
-      url: https://aka.ms/costmgmt/learn
+      url: /learn/paths/control-spending-manage-bills/?WT.mc_id=ignite2020_collections
     - text: Azure Cost Management のビデオ
       url: https://www.youtube.com/c/AzureCostManagement
     - text: コストの分析を開始する
@@ -37,7 +37,7 @@ landingContent:
     - text: 一般的なタスクにコスト分析を使用する
       url: costs/cost-analysis-common-uses.md
     - text: Power BI テンプレート アプリを使用してコストを分析する
-      url: https://docs.microsoft.com/azure/cost-management-billing/costs/analyze-cost-data-azure-cost-management-power-bi-template-app
+      url: ./costs/analyze-cost-data-azure-cost-management-power-bi-template-app.md
     - text: Power BI Desktop を使用して接続する
       url: /power-bi/desktop-connect-azure-cost-management
   - linkListType: tutorial
@@ -59,7 +59,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: 自動化を使用したコストの管理
-      url: https://docs.microsoft.com/azure/cost-management-billing/costs/manage-automation
+      url: ./costs/manage-automation.md
     - text: 使用条件の説明
       url: understand/understand-usage.md
     - text: 請求条件の説明
@@ -101,9 +101,9 @@ landingContent:
     - text: 今すぐコストの最適化を始める
       url: https://azure.microsoft.com/overview/cost-optimization/
     - text: コストを予測し、Azure の支出を最適化する
-      url: https://docs.microsoft.com/learn/modules/predict-costs-and-optimize-spending/
+      url: /learn/modules/predict-costs-and-optimize-spending/
     - text: Microsoft Azure Well-Architected Framework - コストの最適化
-      url: https://docs.microsoft.com/learn/modules/azure-well-architected-cost-optimization/
+      url: /learn/modules/azure-well-architected-cost-optimization/
 - title: Cost Management と Billing を構成する
   linkLists:
   - linkListType: concept
