--- a/articles/azure-signalr/TOC.yml
+++ b/articles/azure-signalr/TOC.yml
@@ -105,7 +105,7 @@
     - name: REST API
       href: 'https://github.com/Azure/azure-signalr/blob/dev/docs/rest-api.md'
     - name: ASP.NET Core SignalR
-      href: 'https://docs.microsoft.com/aspnet/core/signalr'
+      href: /aspnet/core/signalr
     - name: Azure SignalR Service のプロトコル
       href: 'https://github.com/Azure/azure-signalr/blob/dev/specs/ServiceProtocol.md'
     - name: Azure Policy の組み込み
@@ -114,7 +114,7 @@
 - name: リソース
   items:
     - name: ソリューション
-      href: 'https://docs.microsoft.com/azure/architecture/'
+      href: /azure/architecture/
     - name: 顧客事例
       href: 'https://customers.microsoft.com/en-us/search?sq=signalr'
     - name: SignalR のロードマップ
@@ -126,7 +126,7 @@
     - name: FAQ
       href: signalr-resource-faq.md
     - name: SignalR Service のサブスクリプション レベルの制限
-      href: 'https://docs.microsoft.com/azure/azure-resource-manager/management/azure-subscription-service-limits#signalr-service-limits'
+      href: ../azure-resource-manager/management/azure-subscription-service-limits.md#azure-signalr-service-limits
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/signalr-service/'
     - name: ビデオ
