--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -43,7 +43,7 @@
 - name: サンプル
   items:
     - name: コード サンプル
-      href: 'https://docs.microsoft.com/samples/browse/?products=azure&terms=container%20instance'
+      href: /samples/browse/?products=azure&terms=container%2binstance
     - name: Resource Manager テンプレート
       href: container-instances-samples-rm.md
 - name: 概念
