commit translated contents

--- a/articles/attestation/toc.yml
+++ b/articles/attestation/toc.yml
@@ -7,6 +7,7 @@
 - name: クイックスタート
   items:
     - name: ARM テンプレート
+      displayName: Resource Manager
       href: quickstart-template.md
     - name: PowerShell
       href: quickstart-powershell.md
