--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -102,7 +102,7 @@
         - name: Mobile Apps
           tocHref: /azure/app-service-mobile/
           topicHref: /azure/app-service-mobile/
-    - name: 静的 Web アプリ
+    - name: Static Web Apps
       tocHref: /azure/static-web-apps/
       topicHref: /azure/static-web-apps/
     - name: Advisor
