--- a/articles/azure-portal/TOC.yml
+++ b/articles/azure-portal/TOC.yml
@@ -21,7 +21,7 @@
           href: quick-create-template.md
 - name: 概念
   items:
-    - name: ロールベースのアクセス制御を使用したダッシュボードの共有
+    - name: Azure ロールベースのアクセス制御を使用したダッシュボードの共有
       href: azure-portal-dashboard-share-access.md
     - name: プログラムによる Azure ダッシュボードの作成
       href: azure-portal-dashboards-create-programmatically.md
