--- a/articles/confidential-computing/index.yml
+++ b/articles/confidential-computing/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JBCook
   ms.author: jencook
   ms.date: 09/22/2020
-  ms.openlocfilehash: abe5104ff5425103baaca72efdc960a34ffc6a73
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 0d3a800b376edfe7f5c9380fd5b198d4a46362e6
+  ms.sourcegitcommit: 7dacbf3b9ae0652931762bd5c8192a1a3989e701
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "90991994"
+  ms.lasthandoff: 10/16/2020
+  ms.locfileid: "92124345"
 landingContent:
 - title: Azure のコンフィデンシャル コンピューティングについて
   linkLists:
@@ -79,7 +79,7 @@ landingContent:
       url: confidential-nodes-out-of-proc-attestation.md
   - linkListType: quickstart
     links:
-    - text: AKS 上の単純なエンクレーブ コンテナー アプリ
+    - text: AKS での単純なエンクレーブ コンテナー アプリによる CLI ベースのプロビジョニング
       url: confidential-nodes-aks-get-started.md
   - linkListType: sample
     links:
