--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -37,6 +37,8 @@
       href: concepts-route-events.md
     - name: Azure Digital Twins ソリューションのセキュリティ
       href: concepts-security.md
+    - name: 高可用性とディザスター リカバリー
+      href: concepts-high-availability-disaster-recovery.md
 - name: 操作方法ガイド
   items:
     - name: 配置
@@ -199,7 +201,7 @@
           href: /samples/azure-samples/dtdl-validator/dtdl-validator/
         - name: DPS と IoT Hub の統合サンプル
           href: /samples/azure-samples/digital-twins-iothub-integration/adt-iothub-provision-sample/
-        - name: Azure Digital Twins のカスタム Swagger
+        - name: Azure Digital Twins の Logic Apps コネクタ用カスタム Swagger
           href: /samples/azure-samples/digital-twins-custom-swaggers/azure-digital-twins-custom-swaggers/
         - name: SignalR 統合のサンプル
           href: /samples/azure-samples/digitaltwins-signalr-webapp-sample/digital-twins-samples/
