--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -116,7 +116,7 @@
         - name: Azure Policy によるセキュリティ制御
           displayName: 'regulatory, compliance, standards, domains'
           href: ./security-controls-policy.md
-        - name: インデクサー リソースのセキュリティ保護
+        - name: 保護されたコンテンツへのアクセス
           href: search-indexer-securing-resources.md
         - name: セキュリティ ベースライン
           href: security-baseline.md
