--- a/articles/cost-management-billing/reservations/toc.yml
+++ b/articles/cost-management-billing/reservations/toc.yml
@@ -93,7 +93,7 @@
         - name: ソフトウェア プラン
           href: ../../virtual-machines/linux/prepay-suse-software-charges.md?toc=/azure/cost-management-billing/reservations/toc.json
         - name: SQL Database
-          href: ../../sql-database/sql-database-reserved-capacity.md?toc=/azure/cost-management-billing/reservations/toc.json
+          href: ../../azure-sql/database/reserved-capacity-overview.md?toc=%252fazure%252fcost-management-billing%252freservations%252ftoc.json
         - name: 仮想マシン
           href: ../../virtual-machines/windows/prepay-reserved-vm-instances.md?toc=/azure/cost-management-billing/reservations/toc.json
     - name: 購入後の表示、管理、最適化
